# telegram-authenticator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.c  config.h  pam_telegram_authenticator.c  telegram-authenticator.c  telegram.c  telegram.h
